--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
 <body>
 <div class="container">
     <h2>Safety Training</h2>
-    <p>Panoorin muna ang video bago lumabas ang "Start Assessment" button.</p>
+    <p></p>
 
-    <video id="trainingVideo" width="100%" controls>
+    <video id="trainingVideo" width="100%" controls autoplay playsinline>
+    <source src="https://oxwcrrgwbblxfozvqbmm.supabase.co/storage/v1/object/public/training%20videos/safety%20video.mp4" type="video/mp4">
         <source src="YOUR_ONEDRIVE_DIRECT_VIDEO_LINK_HERE" type="video/mp4">
     </video>
 
