--- a/index.html
+++ b/index.html
@@ -4,153 +4,253 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Safety Training with Assessment</title>
+
 <style>
     :root {
         --primary:#0b5fff;
         --danger:#cc0033;
         --success:#1a7f37;
-        --bg:#f2f6ff;
+        --muted:#666;
+        --card-bg:#ffffffcc;
+        --bg:#e9efff;
     }
+
     body {
+        background: linear-gradient(135deg,#0b5fff33,#ffffff);
         font-family: Arial, sans-serif;
-        background: var(--bg);
-        margin:0; padding:0;
+        margin: 0;
+        padding: 20px;
+        line-height: 1.5;
     }
+
     .container {
         max-width: 900px;
-        margin: 20px auto;
-        background: #fff;
+        margin: auto;
+    }
+
+    .card {
+        background: var(--card-bg);
+        backdrop-filter: blur(6px);
+        border-radius: 10px;
         padding: 20px;
-        border-radius: 12px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        box-shadow: 0 3px 12px rgba(0,0,0,0.12);
+        margin-top: 20px;
     }
-    button {
-        padding: 12px 20px;
-        font-size: 16px;
+
+    .hidden { display:none; }
+
+    .btn {
+        padding: 10px 16px;
         border: none;
-        border-radius: 8px;
+        border-radius: 6px;
         cursor: pointer;
+        font-weight: 600;
     }
-    #startBtn {
-        background: var(--primary);
-        color:white;
+    .btn-primary { background: var(--primary); color:#fff; }
+    .btn-muted { background:#e5e5e5; color:#333; }
+
+    input[type="text"] {
+        padding: 8px;
+        border: 1px solid #ccc;
+        border-radius: 6px;
+        width: 250px;
     }
-    #startBtn:disabled {
-        background: gray;
-        cursor:not-allowed;
+
+    .video-container {
+        position: relative;
+        width: 100%;
+        padding-top: 56.25%;
     }
-    .question {
-        margin-bottom: 20px;
-        background:#f8f9ff;
-        padding:15px;
+    .video-container video {
+        position: absolute;
+        top:0; left:0;
+        width:100%; height:100%;
         border-radius:10px;
     }
-    #certificateArea {
-        display:none;
-        margin-top:20px;
-        padding:20px;
-        border:2px solid var(--success);
-        border-radius:10px;
-        background:#e8ffee;
-    }
+
+    .question { font-weight: 600; margin-bottom: 6px; }
+    .question-block { margin-bottom: 18px; }
+
+    h2, h3 { margin-top: 0; }
 </style>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
 <div class="container">
-    <h2>Safety Training</h2>
-    <p></p>
 
-    <video id="trainingVideo" width="100%" controls autoplay playsinline>
-    <source src="https://oxwcrrgwbblxfozvqbmm.supabase.co/storage/v1/object/public/training%20videos/safety%20video.mp4" type="video/mp4">
-        <source src="YOUR_ONEDRIVE_DIRECT_VIDEO_LINK_HERE" type="video/mp4">
-    </video>
+<h2>Safety Training Module</h2>
 
-    <br><br>
-    <button id="startBtn" disabled>Start Assessment</button>
-
-    <form id="examForm" style="display:none; margin-top:20px;">
-        <div class="question">
-            <label>1. Ano ang maximum speed limit sa loob ng Meralco Operating Center?</label><br>
-            <input type="radio" name="q1" value="20 kph">20 kph<br>
-            <input type="radio" name="q1" value="30 kph">30 kph<br>
-            <input type="radio" name="q1" value="40 kph">40 kph
-        </div>
-
-        <div class="question">
-            <label>2. Meralco is (________) facility:</label><br>
-            <input type="radio" name="q2" value="Smoke-free">Smoke-free<br>
-            <input type="radio" name="q2" value="Alcohol-free">Alcohol-free<br>
-            <input type="radio" name="q2" value="Drug-free">Drug-free
-        </div>
-
-        <div class="question">
-            <label>3. Ano ang dapat gamitin bago umakyat sa elevated area?</label><br>
-            <input type="radio" name="q3" value="Hard hat">Hard hat<br>
-            <input type="radio" name="q3" value="Safety harness">Safety harness<br>
-            <input type="radio" name="q3" value="Rubber shoes">Rubber shoes
-        </div>
-
-        <div class="question">
-            <label>4. Ilang points ang dapat makuha para pumasa?</label><br>
-            <input type="radio" name="q4" value="3">3<br>
-            <input type="radio" name="q4" value="4">4<br>
-            <input type="radio" name="q4" value="5">5
-        </div>
-
-        <div class="question">
-            <label>5. Ano ang dapat gawin kung may unsafe condition?</label><br>
-            <input type="radio" name="q5" value="Ireport agad">Ireport agad<br>
-            <input type="radio" name="q5" value="Hayaan lang">Hayaan lang<br>
-            <input type="radio" name="q5" value="Ipost sa Facebook">Ipost sa Facebook
-        </div>
-
-        <button type="button" onclick="submitAssessment()" style="background:var(--primary); color:white;">Submit</button>
-    </form>
-
-    <div id="certificateArea">
-        <h2 style="color:var(--success);">PASADO KA!</h2>
-        <p>I-download ang iyong certificate:</p>
-        <button onclick="downloadCertificate()" style="background:var(--success); color:white;">Download Certificate (PDF)</button>
+<div class="card video-card">
+    <h3>Watch the Safety Orientation Video</h3>
+    <div class="video-container">
+        <video id="trainingVideo" controls>
+            <source src="https://oxwcrrgwbblxfozvqbmm.supabase.co/storage/v1/object/public/training%20videos/safety%20video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    <div style="margin-top:12px;">
+        <label>
+            <input type="checkbox" id="watchedChk" disabled> I confirm that I watched the video.
+        </label>
     </div>
 </div>
 
+<div class="card">
+    <button id="startBtn" class="btn btn-primary" disabled>Start Assessment</button>
+    <button id="resetBtn" class="btn btn-muted hidden">Reset</button>
+</div>
+
+<!-- ASSESSMENT -->
+<div id="assessment" class="card hidden">
+    <h3>Assessment</h3>
+
+    <div class="question-block">
+        <label class="question">1. Ano ang maximum speed limit sa loob ng Meralco Operating Center?</label><br>
+        <label><input type="radio" name="q1" value="20 kph"> 20 kph</label><br>
+        <label><input type="radio" name="q1" value="30 kph"> 30 kph</label><br>
+        <label><input type="radio" name="q1" value="40 kph"> 40 kph</label><br>
+        <label><input type="radio" name="q1" value="50 kph"> 50 kph</label>
+    </div>
+
+    <div class="question-block">
+        <label class="question">2. Meralco is a (________) facility.</label><br>
+        <label><input type="radio" name="q2" value="Smoke-free"> Smoke-free</label><br>
+        <label><input type="radio" name="q2" value="Pet-friendly"> Pet-friendly</label><br>
+        <label><input type="radio" name="q2" value="Noise-free"> Noise-free</label>
+    </div>
+
+    <div class="question-block">
+        <label class="question">3. Follow (______) when using a fire extinguisher.</label><br>
+        <label><input type="radio" name="q3" value="P.A.S.S"> P.A.S.S</label><br>
+        <label><input type="radio" name="q3" value="S.O.P"> S.O.P</label><br>
+        <label><input type="radio" name="q3" value="T.A.B"> T.A.B</label>
+    </div>
+
+    <div class="question-block">
+        <label class="question">4. (______) trash bins are designated for used facemasks and tissues.</label><br>
+        <label><input type="radio" name="q4" value="Biohazard"> Biohazard</label><br>
+        <label><input type="radio" name="q4" value="Recyclable"> Recyclable</label><br>
+        <label><input type="radio" name="q4" value="Compost"> Compost</label>
+    </div>
+
+    <div class="question-block">
+        <label class="question">5. Ilagay ang pangalan ng Trainee:</label><br>
+        <input type="text" id="traineeName" placeholder="Juan Dela Cruz">
+    </div>
+
+    <button id="submitBtn" class="btn btn-primary">Submit</button>
+    <button id="retakeBtn" class="btn btn-muted hidden">Retake Assessment</button>
+</div>
+
+<div id="result" class="card hidden"></div>
+
+</div>
+
 <script>
-    const video = document.getElementById("trainingVideo");
-    const startBtn = document.getElementById("startBtn");
+const watchedChk = document.getElementById('watchedChk');
+const startBtn = document.getElementById('startBtn');
+const assessment = document.getElementById('assessment');
+const resetBtn = document.getElementById('resetBtn');
+const submitBtn = document.getElementById('submitBtn');
+const retakeBtn = document.getElementById('retakeBtn');
+const resultDiv = document.getElementById('result');
+const trainingVideo = document.getElementById('trainingVideo');
 
-    video.addEventListener("ended", () => {
-        startBtn.disabled = false;
+// --- MONITORING CONFIG ---
+const APP_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyBql2dvKoJ0IuzXEXOAhsgABQy1_il_bFJrXPMB1EbMvqyOVvhLckFZaMRZAsx6TpZ/exec";
+const SECRET = "V9x!7Qm#4sP@2kT8zL$1gR";
+
+// --- ATTEMPT TRACKING ---
+let attemptCount = 1;
+
+// Enable checkbox only when video ends
+trainingVideo.addEventListener('ended', () => {
+    watchedChk.disabled = false;
+});
+
+// Enable Start Assessment only if checkbox is checked
+watchedChk.addEventListener('change', () => {
+    startBtn.disabled = !watchedChk.checked;
+});
+
+startBtn.addEventListener('click', () => {
+    assessment.classList.remove('hidden');
+    resetBtn.classList.remove('hidden');
+    resultDiv.classList.add('hidden');
+});
+
+resetBtn.addEventListener('click', resetAll);
+retakeBtn.addEventListener('click', () => {
+    attemptCount++;
+    resetAll();
+});
+
+function resetAll() {
+    ["q1","q2","q3","q4"].forEach(q => {
+        let checked = document.querySelector(`input[name="${q}"]:checked`);
+        if (checked) checked.checked = false;
     });
+    document.getElementById('traineeName').value = "";
+    resultDiv.innerHTML = "";
+    resultDiv.classList.add('hidden');
+}
 
-    startBtn.addEventListener("click", () => {
-        document.getElementById("examForm").style.display = "block";
-        startBtn.style.display = "none";
-    });
+submitBtn.addEventListener('click', async () => {
+    let score = 0;
 
-    function submitAssessment() {
-        let score = 0;
+    if (document.querySelector('input[name="q1"]:checked')?.value === "30 kph") score++;
+    if (document.querySelector('input[name="q2"]:checked')?.value === "Smoke-free") score++;
+    if (document.querySelector('input[name="q3"]:checked')?.value === "P.A.S.S") score++;
+    if (document.querySelector('input[name="q4"]:checked')?.value === "Biohazard") score++;
 
-        if (document.querySelector('input[name="q1"]:checked')?.value === "30 kph") score++;
-        if (document.querySelector('input[name="q2"]:checked')?.value === "Smoke-free") score++;
-        if (document.querySelector('input[name="q3"]:checked')?.value === "Safety harness") score++;
-        if (document.querySelector('input[name="q4"]:checked')?.value === "4") score++;
-        if (document.querySelector('input[name="q5"]:checked')?.value === "Ireport agad") score++;
+    let name = document.getElementById('traineeName').value.trim();
+    if (!name) return alert("Pakilagay ang pangalan.");
 
-        if (score >= 4) {
-            document.getElementById("certificateArea").style.display = "block";
-        } else {
-            alert("Hindi ka pumasa. Kailangan 4/5.");
-        }
+    let result = score === 4 ? "PASS" : "FAIL";
+
+    // --- SEND MONITORING DATA ---
+    try {
+        await fetch(APP_SCRIPT_URL, {
+            method: "POST",
+            mode: "no-cors",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({
+                token: SECRET,
+                name: name,
+                score: score,
+                result: result,
+                attempts: attemptCount
+            })
+        });
+        console.log("Monitoring record sent.");
+    } catch (err) {
+        console.error("Monitoring failed:", err);
     }
 
-    function downloadCertificate() {
-        const pdfContent = "Congratulations! You passed the Safety Training Assessment.";
-        const blob = new Blob([pdfContent], { type: "application/pdf" });
-        const link = document.createElement("a");
-        link.href = URL.createObjectURL(blob);
-        link.download = "Certificate.pdf";
-        link.click();
+    // --- SHOW RESULT & GENERATE CERTIFICATE ---
+    resultDiv.classList.remove('hidden');
+    if (result === "PASS") {
+        resultDiv.innerHTML = "<h3 class='result-pass'>PASADO!</h3><p>Generating certificate…</p>";
+        generateCertificate(name);
+        retakeBtn.classList.add('hidden');
+    } else {
+        resultDiv.innerHTML = "<h3 class='result-fail'>You FAILED.</h3><p>Try again.</p>";
+        retakeBtn.classList.remove('hidden');
     }
+});
+
+async function generateCertificate(name) {
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF({ unit: "pt", format: "a4" });
+    doc.setFontSize(28);
+    doc.text("Certificate of Completion", 300, 120, { align:"center" });
+    doc.setFontSize(18);
+    doc.text(`Awarded to: ${name}`, 300, 200, { align:"center" });
+    doc.text("Successfully completed the Safety Training Assessment", 300, 240, { align:"center" });
+    doc.save(`Certificate_${name}.pdf`);
+}
 </script>
+
 </body>
 </html>
